static/sass/components/form.scss
.form {
  font-size: 1.6rem;

  border-radius: 1rem;
  grid-row-start: content-start;
  grid-row-end: content-end;
  grid-column-start: center-start;
  grid-column-end: center-end;

  display: grid;
  background-color: var(--light-grey-1);
  text-align: center;

  grid-template-rows: minmax(10rem, 1fr) minmax(5rem, min-content);
  grid-row-gap: 2rem;

  &_body {
    display: grid;
    grid-template-rows: repeat(2, minmax(5rem, 1fr));
    grid-row-gap: 2rem;

    &--headed {
      grid-template-rows: auto;
    }
  }

  &_submit {
    display: grid;
    text-align: center;
    justify-items: center;
    align-items: center;
    grid-template-rows: minmax(2rem, min-content) minmax(3rem, 1fr) minmax(2rem, min-content);
    grid-row-gap: .6rem;
  }

  &--logout {
    display: grid;
    grid-column-start: 8;
    grid-column-end: center-end;
    justify-items: end;
    align-items: center;
  }

  &_helper-text {
    font-size: 1.3rem;
    padding-bottom: .6rem;
  }
}

.form-select {
  display: grid;
  justify-items: center;
  align-items: center;

  &_dropdown {
    border-radius: .5rem;
    padding: .5rem;
    width: 50%;
    box-shadow: var(--light-shadow);
    align-self: start;
    cursor: pointer;
  }
}

.form-checkbox,
.form-radio {

  &:not([hidden]) {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(min-content, min(100%, max(100%/2))));
    grid-template-rows: auto;
    justify-content: space-around;
    align-content: center;
    grid-row-gap: 1rem;
  }

  &_input {
    display: grid;
    grid-template-columns: repeat(2, min-content);
    grid-column-gap: .5rem;
    justify-content: center;

    label,
    input {
      cursor: pointer;
    }

    label {
      line-height: 100%;
      padding: .2rem 0;
    }
  }

  &_legend {
    padding: 0 .5rem .5rem;
    font-weight: 600;
  }
}

.form-input {

  &:not([hidden]) {
    display: grid;
    align-items: start;
    justify-items: center;
  }

  &_label {
    &:hover {
      cursor: pointer;
    }
  }

  &_file {
    display: none;
  }

  &_text {
    min-width: 40%;
    border-style: solid;
    border-color: var(--dark-grey-3);
    box-shadow: var(--light-shadow);
    border-radius: .5rem;
    font-size: 1.8rem;
    text-align: center;
    padding: .8rem;
  }

  &_text::placeholder {
    color: var(--light-grey-4);
    font-style: italic;
  }

}

